2012-05-29  Stephen Eglen  <stephen@gnu.org>

	* R/ms_funs.r (xcorr.restricted): Add plot argument.

2012-05-28  Stephen Eglen  <stephen@gnu.org>

	* R/ms_funs.r (xcorr.plot): Add plot=TRUE argument.
	(plot.mm.s): "episodes" is now a matrix.

2012-02-25  Stephen Eglen  <stephen@gnu.org>

	* R/sanger.R (sanger.read.spikes): Remove redundant variable 'pos'.

	* R/litke.R (mat.to.rda.dir): Fix typo: d1-> dir.

	* R/ms_funs.r (plot.rate.mslayout.rad): Add draw.empty argument.

2012-02-12  Stephen Eglen  <stephen@gnu.org>

	* DESCRIPTION (Version): Move up to 0.33 with move to git.

2011-06-21  Stephen Eglen  <stephen@gnu.org>

	* R/ms_funs.r (plot.mealayout): Switch between high and low
	density versions based on the number of electrodes.

	* R/iit.R (make.iit.layout): Switch back to using "mealayout" for
	the class.
	(make.iit.layout): electrode.num column added to the pos array -
	required for the sql writer.  Change column numbers also to "x"
	and "y" in the pos array.

2011-06-09  Stephen Eglen  <stephen@gnu.org>

	* R/episode.detection.R (episode.detection): When there are no
	episodes, return the NULL object.

2011-05-23  Stephen Eglen  <stephen@gnu.org>

	* R/feller.R (feller.spiketimes): Add check to prevent multiple
	files with same electrode/cell name being added.  This was
	happening with some recordings where e.g. both control and drug
	conditions were kept in the same folder; the fix was to put
	these conditions into their own folders.

2011-04-02  Stephen Eglen  <stephen@gnu.org>

	* R/iit.R (iit.read.spikes): Update sampling rate from 7800 Hz to
	7702 (from Matthias).

2011-02-17  Stephen Eglen  <stephen@gnu.org>

	* R/ms_funs.r (plot.mm.s): Pass xlab as an argument.

2011-01-31  Stephen Eglen  <stephen@gnu.org>

	* R/ms_funs.r (read.spikes): Add 'sql' as a new reader.

2010-12-02  Stephen Eglen  <stephen@gnu.org>

	* R/sql.R (make.sql.file): Add a new column, id, to the neuron
	table.  This is used in the spikes table, rather than neuron.name,